--- a/eloyin-api/package.json
+++ b/eloyin-api/package.json
@@ -11,16 +11,16 @@
   },
   "devDependencies": {},
   "dependencies": {
-    "strapi": "3.1.4",
-    "strapi-admin": "3.1.4",
-    "strapi-utils": "3.1.4",
-    "strapi-plugin-content-type-builder": "3.1.4",
-    "strapi-plugin-content-manager": "3.1.4",
-    "strapi-plugin-users-permissions": "3.1.4",
-    "strapi-plugin-email": "3.1.4",
-    "strapi-plugin-upload": "3.1.4",
-    "strapi-connector-bookshelf": "3.1.4",
-    "knex": "<0.20.0",
+    "strapi": "3.2.5",
+    "strapi-admin": "3.2.5",
+    "strapi-utils": "3.2.5",
+    "strapi-plugin-content-type-builder": "3.2.5",
+    "strapi-plugin-content-manager": "3.2.5",
+    "strapi-plugin-users-permissions": "3.2.5",
+    "strapi-plugin-email": "3.2.5",
+    "strapi-plugin-upload": "3.2.5",
+    "strapi-connector-bookshelf": "3.2.5",
+    "knex": "^0.21.9",
     "sqlite3": "latest"
   },
   "author": {
