--- a/eloyin-frontend/package.json
+++ b/eloyin-frontend/package.json
@@ -5,26 +5,27 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --open --config webpack.dev.js"
+    "start": "webpack-dev-server --open --config webpack.dev.js",
+    "serve": "webpack serve --config ./webpack.dev.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "css-loader": "^4.3.0",
-    "file-loader": "^6.1.0",
-    "mini-css-extract-plugin": "^0.11.2",
+    "css-loader": "^5.0.0",
+    "file-loader": "^6.2.0",
+    "mini-css-extract-plugin": "^1.2.1",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
-    "sass": "^1.26.11",
-    "sass-loader": "^10.0.2",
-    "style-loader": "^1.2.1",
+    "sass": "^1.27.2",
+    "sass-loader": "^10.0.4",
+    "style-loader": "^2.0.0",
     "svg-inline-loader": "^0.8.2",
-    "terser-webpack-plugin": "^4.2.2",
-    "webpack": "^4.44.2",
+    "terser-webpack-plugin": "^5.0.3",
+    "webpack": "^5.3.2",
     "webpack-bundle-analyzer": "^3.9.0",
-    "webpack-cli": "^3.3.12",
+    "webpack-cli": "^4.1.0",
     "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "^5.1.4"
+    "webpack-merge": "^5.2.0"
   },
   "dependencies": {
     "@csstools/normalize.css": "^11.0.1",
